--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,78 +1,9 @@
+{% extends "base.html" %}
 {% load static %}
 {% load thumbnail %}
-{% load humanize %}
 {% load catalog_tags %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<title>Fissman</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="author" content="Frontend: Artem Lyapunov | WebElement.ru" />
-
-    {% include 'css_files.html' %}
-
-</head>
-<body>
-<div class="wrapper">
-
-{% include 'header.html' %}
-
-
-<section class="sec topnav_sec_skelet">
-<nav class="sec topnav_sec">
-	<div class="container">
-
-		<div class="topnav_buttons">
-			<a href="#" class="button blue catalog_open"><span class="icon_menu"></span> Каталог</a>
-			<a href="catalog.html" class="button"><span class="icon_shock"></span> Шок-цена!</a>
-
-			<nav class="catalog_menu_box">
-				{% catalog_menu %}
-			</nav>
-		</div>
-
-		<img class="mobile_logo" src="{% static 'img/logo.png' %}" alt="" />
-
-		<form action="" method="post" class="topnav_search_form">
-			<input type="text" placeholder="Например, сковорода вок" class="topnav_search_input" />
-			<button type="submit" class="topnav_search_button">Поиск</button>
-			<button class="close_search_mobile" type="button">Отменить</button>
-
-			<div class="search_dropdown mCustomScrollbar" data-mcs-theme="minimal-dark">
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="{% static 'img/prod_1.jpg' %}" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: <span>9610</span></div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-
-				<a href="" class="button search_see_all">Показать все</a>
-
-			</div>
-		</form>
-
-		<ul class="topnav_shortmenu">
-			<li><a href="">О компании</a></li>
-			<li><a href="">Оплата и доставка</a></li>
-			<li><a href="">Контакты</a></li>
-		</ul>
-
-		<div class="top_mobile_buttons">
-			<a class="open_mobile_search" href=""><img src="{% static 'img/i_search.png' %}" /></a>
-			<a class="open_mobile_cart" href=""><img src="{% static 'img/i_mini-cart.png' %}" /></a>
-		</div>
-
-	</div>
-</nav>
-</section>
+{% load humanize %}
+{% block content %}
 
 <section class="sec content_sec">
 	<div class="container">
@@ -269,72 +200,4 @@
 	</div>
 </section>
 
-
-<section class="sec backtop_sec">
-	<a href="#" class="backtop">В начало страницы</a>
-</section>
-
-
-
-{% include 'footer.html' %}
-
-</div>
-
-
-<!-- CART -->
-<a href="#" class="minicart_open visible">
-	<span class="minicart_count">17</span>
-	<div class="button"><img src="{% static 'img/i_cart_big.png' %}" alt="" /></div>
-</a>
-
-<div class="modal" id="modal_minicart">
-	<div class="minicart_content">
-		<header>
-			<h2 class="modal_title">Ваша корзина</h2>
-			<a href="#" class="modal_close">x</a>
-		</header>
-		<section class="minicart_list mCustomScrollbar">
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="{% static 'img/prod_1.jpg' %}" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="product_price_old">89390 ₽</div>
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-		</section>
-		<footer class="minicart_footer">
-			<div class="minicart_total_price">Итого: <b>3495 ₽</b></div>
-			<p>Чтобы узнать стоимость доставки, перейдите к оформлению заказа.</p>
-
-			<div class="minicart_buttons">
-				<a href="order.html" class="button medium">Оформить заказ</a>
-				<a href="basket.html" class="button-o gray medium">Перейти к корзине</a>
-			</div>
-		</footer>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-<!-- MODAL -->
-
-{% include 'all_modals.html' %}
-
-{% include 'js_files.html' %}
-
-</body>
-</html>
+{% endblock %}
