--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -1,94 +1,9 @@
+{% extends "base.html" %}
 {% load static %}
 {% load thumbnail %}
 {% load catalog_tags %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<title>Fissman</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="author" content="Frontend: Artem Lyapunov | WebElement.ru" />
-
-	{% include 'css_files.html' %}
-
-</head>
-<body>
-<div class="wrapper">
-
-
-{% include 'header.html' %}
-
-
-
-<section class="sec topnav_sec_skelet">
-<nav class="sec topnav_sec">
-	<div class="container">
-
-		<div class="topnav_buttons">
-			<a href="#" class="button blue catalog_open"><span class="icon_menu"></span> Каталог</a>
-			<a href="catalog.html" class="button"><span class="icon_shock"></span> Шок-цена!</a>
-
-			<nav class="catalog_menu_box">
-				{% catalog_menu %}
-			</nav>
-		</div>
-
-		<img class="mobile_logo" src="img/logo.png" alt="" />
-
-		<form action="" method="post" class="topnav_search_form">
-			<input type="text" placeholder="Например, сковорода вок" class="topnav_search_input" />
-			<button type="submit" class="topnav_search_button">Поиск</button>
-			<button class="close_search_mobile" type="button">Отменить</button>
-
-			<div class="search_dropdown mCustomScrollbar" data-mcs-theme="minimal-dark">				
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
-
-
-				<a href="" class="button search_see_all">Показать все</a>
-				
-			</div>
-		</form>
-
-		<ul class="topnav_shortmenu">
-			<li><a href="">О компании</a></li>
-			<li><a href="">Оплата и доставка</a></li>
-			<li><a href="">Контакты</a></li>
-		</ul>
-
-		<div class="top_mobile_buttons">
-			<a class="open_mobile_search" href=""><img src="img/i_search.png" /></a>
-			<a class="open_mobile_cart" href=""><img src="img/i_mini-cart.png" /></a>
-		</div>
-
-	</div>
-</nav>
-</section>
-
-
+{% load humanize %}
+{% block content %}
 <section class="sec bread_sec">
 	<div class="container">
 		
@@ -129,8 +44,7 @@
 						</article>
 						<div class="product_anchors">
 							<a href="#specs" class="product_anchor">Харакетристики</a>
-							<a href="#reviews" class="product_anchor">5 отзывов</a>
-							<a href="#seriya" class="product_anchor">Серия STORM</a>
+							<a href="#reviews" class="product_anchor">{{ product.reviews.count }} отзывов</a>
 						</div>
 					</div>
 				</div>
@@ -140,13 +54,13 @@
 				<div class="product_badges">
 					<span class="instock">В наличии</span>
 					<!-- <span class="instock not">Нет в наличии</span> -->
-					<div class="beidge shock">Шок цена</div>
+<!--					<div class="beidge shock">Шок цена</div>-->
 				</div>
 				<div class="product_price_box">
 					{% if product.price_old %}
-						<s class="product_price_old">{{ product.price_old }} ₽</s>
+						<s class="product_price_old">{{ product.price_old|floatformat:0|intcomma }} ₽</s>
 					{% endif %}
-					<div class="product_price">{{ product.price }} ₽</div>
+					<div class="product_price">{{ product.price|floatformat:0|intcomma }} ₽</div>
 				</div>
 				<div class="product_promocode_box">
 					<span class="note">Используй промокод в корзине, чтобы получить скидку</span>
@@ -154,10 +68,6 @@
 				</div>
 
 				<table class="product_table_prices">
-<!--					<tr>-->
-<!--						<td>при заказе от 50 000 ₽</td>-->
-<!--						<td>4576 ₽</td>-->
-<!--					</tr>-->
 				</table>
 				<a href=""><b>Как заказать оптом?</b></a>
 
@@ -216,11 +126,11 @@
 
 			<section class="reviews_box" id="reviews">
 				<div class="reviews_titles_row">
-					<h2 class="h1">Отзывы <span class="reviews_count">5</span></h2>
+					<h2 class="h1">Отзывы <span class="reviews_count">{{ product.reviews.count }}</span></h2>
 					<a href="#write_review_modal" class="button blue medium open_modal">Написать отзыв</a>
 				</div>
 				<div class="reviews_list">
-
+					{% for review in product.reviews.all %}
 					<!-- ITEM -->
 					<article class="review_item">
 						<div class="review_details">
@@ -243,13 +153,13 @@
 							<a href="{% static 'img/rev_2.jpg' %}" data-fancybox="rev-1" class="review_photo"><img src="{% static 'img/rev_2.jpg' %}" alt=""></a>
 						</div>
 					</article>
+					{% endfor %}
 
-
-					
 				</div>
 			</section>
-
+			{% if product.reviews.count > 3 %}
 			<a href="" class="button gray medium w100 show_reviews">Смотреть ещё отзывы</a>
+			{% endif %}
 		</main>
 
 
@@ -275,36 +185,7 @@
 			<div class="sidebar_block carousel">
 				<ul class="single_prod_slider arrowsNav owl-carousel">
 
-					<li class="item">
-						<div class="product_item incatalog">
-							<div class="product_item-icons">
-								<span class="hurry_text">Успей купить!</span>
-								<span class="beidge shock">Шок-цена!</span>
-							</div>
-							<a href="" class="product_item-image">
-								<img src="{% static 'img/prod_1.jpg' %}" alt="" />
-							</a>
-							<a href="" class="product_item-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-							<div class="product_item-artnum">Артикул: 9610</div>
-							<div class="product_item-prices">
-								<u class="product_item-price_old">41000 ₽</u>
-								<span class="product_item-price">40990 ₽</span>
-							</div>
-							<div class="product_item-buttons">
-								<a href="#" class="button-o gray product_item-buy">В корзину</a>
-								<div class="product_item-counter_box">
-									<div class="counter_box">
-										<button type="button" class="counter_ctrl minus">-</button>
-										<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
-										<button type="button" class="counter_ctrl plus">+</button>
-									</div>
-									<button class="button add_to_cart_small"><img src="{% static 'img/i_cart.png' %}" alt="" /></button>
-									<a href="#" class="close_add_to_cart">x</a>
-								</div>
-								<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
-							</div>
-						</div>
-					</li>
+					<li class="item"></li>
 					
 				</ul>
 			</div>
@@ -315,50 +196,6 @@
 	</div>
 </section>
 
-
-<section class="sec content_sec white_bg" id="seriya">
-	<div class="container">
-		
-		<h2 class="sec_title">Другие товары из этой же серии</h2>
-
-		<div class="catalog_box items-5">
-
-			<!-- ITEM -->
-			<div class="product_item incatalog">
-				<div class="product_item-icons">
-					<span class="beidge count">Осталось: 5</span>
-				</div>
-				<a href="" class="product_item-image">
-					<img src="{% static 'img/prod_1.jpg' %}" alt="" />
-				</a>
-				<a href="" class="product_item-title">
-					Сковорода для жарки ALLENDE 24х5,5см (алюминий)
-					<span class="product_item-instock">В наличии</span>
-				</a>
-				<div class="product_item-artnum">Артикул: 9610</div>
-				<div class="product_item-prices">
-					<span class="product_item-price">990 ₽</span>
-				</div>
-				<div class="product_item-buttons">
-					<a href="#" class="button-o gray product_item-buy">В корзину</a>
-					<div class="product_item-counter_box">
-						<div class="counter_box">
-							<button type="button" class="counter_ctrl minus">-</button>
-							<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_ctrl plus">+</button>
-						</div>
-						<button class="button add_to_cart_small"><img src="{% static 'img/i_cart.png' %}" alt="" /></button>
-						<a href="#" class="close_add_to_cart">x</a>
-					</div>
-					<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
-				</div>
-			</div>
-
-			
-		</div>
-
-	</div>
-</section>
 
 
 
@@ -453,23 +290,4 @@
 	</div>
 </section>
 
-
-
-
-<section class="sec backtop_sec">
-	<a href="#" class="backtop">В начало страницы</a>
-</section>
-
-
-{% include 'footer.html' %}
-
-</div>
-
-
-<!-- MODAL -->
-{% include 'all_modals.html' %}
-
-{% include 'js_files.html' %}
-
-</body>
-</html>
+{% endblock %}
