--- a/templates/page.html
+++ b/templates/page.html
@@ -7,7 +7,7 @@
 
 		<ul class="bread">
 			<li><a href="">Главная</a></li>
-			<li>{{ page.menu.title}}</li>
+			<li>{{ page.title}}</li>
 		</ul>
 
 	</div>
@@ -16,10 +16,9 @@
 
 <section class="sec content_sec white_bg">
 	<div class="container">
-
 		<main class="maincol">
 
-			<h1>{{ page.menu.title}}</h1>
+			<h1>{{ page.title}}</h1>
 
 			{{ page.content|safe }}
 
