--- a/basket/templates/basket/index.html
+++ b/basket/templates/basket/index.html
@@ -87,7 +87,7 @@
 					<th width="180">&nbsp;</th>
 					<th>&nbsp;</th>
 					<th>Цена за шт.</th>
-					<th class="cart_specprice_th">Ваша спеццена <br>ОПТ 1</th>
+<!--					<th class="cart_specprice_th">Ваша спеццена <br>ОПТ 1</th>-->
 					<th>Количество</th>
 					<th>К оплате</th>
 					<th>&nbsp;</th>
@@ -101,8 +101,9 @@
 							{% endthumbnail %}
 						</a>
 					</td>
-					<td class="cart_prod_title"><a href="">{{ line.product.name }}</a></td>
+					<td class="cart_prod_title"><a href="{% url 'catalog:product-detail' line.product.slug line.product.pk %}">{{ line.product.name }}</a></td>
 					<td><span class="cart_mobile_label">Цена за шт.</span><s class="cart_price_old">{{ line.price_excl_tax|floatformat:0|intcomma }} ₽</s></td>
+					{% comment %}
 					<td class="cart_specprice_th">
 						<span class="cart_specprice_box">
 							<span class="cart_mobile_label">Ваша спеццена: <span class="border">ОПТ-1</span></span>
@@ -110,11 +111,12 @@
 <!--							<small>Скидка <br>по промокоду <b>946 ₽</b></small>-->
 						</span>
 					</td>
+					{% endcomment %}
 
 					<td>
 						<div class="counter_big_box">
 							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" data-pk="{{ line.pk }}" value="{{ line.quantity }}" data-min="1" data-max="99" />
+							<input type="text" class="counter_big_input" data-product="{{ line.product.pk }}" value="{{ line.quantity }}" data-min="1" data-max="99" />
 							<button type="button" class="counter_big_ctrl plus">+</button>
 						</div>
 					</td>
@@ -131,7 +133,6 @@
 						<div class="cart_itogo_final">
 							<span class="ib">
 								<strong>К оплате: </strong>
-								<small>по вашей спеццене</small>
 							</span>
 							<span class="ib cart_final_price" id="total_price">{{ basket.get_total_sum|floatformat:0|intcomma }} ₽</span>
 							<button type="submit" class="button cart_order">Оформить заказ</button>
