--- a/templates/index.html
+++ b/templates/index.html
@@ -68,22 +68,24 @@
 							{% endif %}
 							<span class="product_item-price">{{ prod.price|floatformat:0|intcomma }} ₽</span>
 						</div>
-						<div class="product_item-buttons">
-							{% comment %}
-							<span class="product_added visible">Добавлен в корзину</span>
-							{% endcomment %}
-							<a href="#" data-product="{{ prod.pk }}" class="button-o gray product_item-buy">В корзину</a>
-							<div class="product_item-counter_box">
-								<div class="counter_box">
-									<button type="button" class="counter_ctrl minus">-</button>
-									<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
-									<button type="button" class="counter_ctrl plus">+</button>
-								</div>
-								<button class="button add_to_cart_small"><img src="{% static 'img/i_cart.png' %}" alt="" /></button>
-								<a href="#" class="close_add_to_cart">x</a>
+					<div class="product_item-buttons">
+						<span class="product_added">Добавлен в корзину</span>
+						<a href="/basket/" data-product="{{ prod.pk }}" class="button-o gray product_item-buy">В корзину</a>
+						<div class="product_item-counter_box">
+							<div class="counter_box">
+								<button type="button" class="counter_ctrl minus">-</button>
+								<input type="text" data-product="{{ prod.pk }}" class="counter_input" value="1" data-min="1" data-max="99" />
+								<button type="button" class="counter_ctrl plus">+</button>
 							</div>
-							<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
+							<a href="/basket/" data-product="{{ prod.pk }}">
+							<button class="button add_to_cart_small">
+								<img src="{% static 'img/i_cart.png' %}" alt="" />
+							</button>
+							</a>
+							<a href="#" class="close_add_to_cart" data-product="{{ prod.pk }}">x</a>
 						</div>
+						<a href="" class="product_item-like"><i class="fa fa-heart"></i></a>
+					</div>
 					</div>
 				</li>
 				{% endwith %}
@@ -132,22 +134,24 @@
 						<div class="product_item-prices">
 							<span class="product_item-price">{{ prod.price|floatformat:0|intcomma }} ₽</span>
 						</div>
-						<div class="product_item-buttons">
-							{% comment %}
-							<span class="product_added">Добавлен в корзину</span>
-							{% endcomment %}
-							<a href="#" data-product="{{ prod.pk }}" class="button-o gray product_item-buy">В корзину</a>
-							<div class="product_item-counter_box">
-								<div class="counter_box">
-									<button type="button" class="counter_ctrl minus">-</button>
-									<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
-									<button type="button" class="counter_ctrl plus">+</button>
-								</div>
-								<button class="button add_to_cart_small"><img src="{% static 'img/i_cart.png' %}" alt="" /></button>
-								<a href="#" class="close_add_to_cart">x</a>
+					<div class="product_item-buttons">
+						<span class="product_added">Добавлен в корзину</span>
+						<a href="/basket/" data-product="{{ prod.pk }}" class="button-o gray product_item-buy">В корзину</a>
+						<div class="product_item-counter_box">
+							<div class="counter_box">
+								<button type="button" class="counter_ctrl minus">-</button>
+								<input type="text" data-product="{{ prod.pk }}" class="counter_input" value="1" data-min="1" data-max="99" />
+								<button type="button" class="counter_ctrl plus">+</button>
 							</div>
-							<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
+							<a href="/basket/" data-product="{{ prod.pk }}">
+							<button class="button add_to_cart_small">
+								<img src="{% static 'img/i_cart.png' %}" alt="" />
+							</button>
+							</a>
+							<a href="#" class="close_add_to_cart" data-product="{{ prod.pk }}">x</a>
 						</div>
+						<a href="" class="product_item-like"><i class="fa fa-heart"></i></a>
+					</div>
 					</div>
 				</li>
 				{% endfor %}
